Add prompt settings

--- a/.env.example
+++ b/.env.example
@@ -56,3 +56,6 @@ TGPT_OPENAI_API_KEY=
 
 # Adjusts the model to avoid using tokens from the input, which can discourage the model from repeating itself
 # TGPT_FREQUENCY_PENALTY=0.0
+
+# Default system prompt
+# TGPT_PROMPT="You are helpful assistant"
